# local-global-solar

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
config/: data_sources  folds.json  uk_rio.json
expers/: conda env build  simple_conv.py  simple_dnn.py  simple_lstm.py  simple_transformer.py  simple_tree.py
results/exper=cnn_irrad_weather/: fold_gcv_rmse_summary.csv  fold_gcv_skill_summary.csv  fold_local_rmse_summary.csv  fold_local_skill_summary.csv
results/exper=cnn_irrad_weather_f2/: fold_gcv_rmse_summary.csv  fold_gcv_skill_summary.csv  fold_local_rmse_summary.csv  fold_local_skill_summary.csv
results/exper=cnn_noirrad_weather/: fold_gcv_rmse_summary.csv  fold_gcv_skill_summary.csv  fold_local_rmse_summary.csv  fold_local_skill_summary.csv
results/exper=dnn_irrad_noweather/: fold_gcv_rmse_summary.csv  fold_gcv_skill_summary.csv  fold_local_rmse_summary.csv  fold_local_skill_summary.csv
results/exper=dnn_irrad_weather/: fold_gcv_rmse_summary.csv  fold_gcv_skill_summary.csv  fold_local_rmse_summary.csv  fold_local_skill_summary.csv
results/exper=dnn_noirrad_noweather/: fold_gcv_rmse_summary.csv  fold_gcv_skill_summary.csv  fold_local_rmse_summary.csv  fold_local_skill_summary.csv
results/exper=dnn_noirrad_weather/: fold_gcv_rmse_summary.csv  fold_gcv_skill_summary.csv  fold_local_rmse_summary.csv  fold_local_skill_summary.csv
results/exper=lstm_irrad_noweather/: fold_gcv_rmse_summary.csv  fold_gcv_skill_summary.csv  fold_local_rmse_summary.csv  fold_local_skill_summary.csv
results/exper=lstm_irrad_weather/: fold_gcv_rmse_summary.csv  (+3 more)
(+170 files in other folders)
