[metadata]
name = zephyrus
version = 0.0.1-alpha
description = AI
author = Tim Cargan
Licence = None
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    zephyrus
install_requires =
    setuptools
    absl-py
    numpy
    jax
    jaxtyping
    einops
    flax
    tensorflow ; sys_platform!="darwin"
    tensorflow-metal ; platform_system=="darwin"
    tensorflow-macos ; platform_system=="darwin"
    tensorflow-io ; sys_platform!="darwin"
    tensorflow-datasets ; sys_platform!="darwin"
    tensorflow-addons
    tensorflow-decision-forests ; platform_system=="Linux"
    pandas
    pyarrow
    scikit-learn
    pillow
    keras-tuner
python_requires = >=3.10
package_dir =
    =src
zip_safe = no